--- a/projects/index.html
+++ b/projects/index.html
@@ -69,7 +69,7 @@
             </ol>
 
             <div class="label">
-                <p><a target="_blank" href="https://www.mixcloud.com/carcercitymall/q4-2019/">Read More</a></p>
+                <p><a href="/projects/placeholder">Read More</a></p>
             </div>
         </div>
 
@@ -94,10 +94,59 @@
 								</ol>
 
 								<div class="label">
-										<p><a target="_blank" href="/projects/placeholder">Read Less</a></p>
+										<p><a href="/projects/placeholder">Read Less</a></p>
 								</div>
 						</div>
 
+						<div id="content">
+										<img class="auditorium" src="../images/projects/deskless/Deskless.png" style="width: 250px;"/>
+										<h3 style="float: right; right: 4px;">Suitcase-Computer</h3>
+										<p>1 day</p>
+										<ol class="playlist_info">
+												<li>Revolting Cocks - We Shall Cleanse the World</li>
+												<li>Skinny Puppy - Far Too Frail</li>
+												<li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
+												<li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
+												<li>Randolph &amp; Mortimer - Citizens</li>
+												<li>Cubanate - Split Second</li>
+												<li>Celldweller - Switchback</li>
+												<li>Acumen Nation - Coming Down</li>
+												<li>Test Dept - Pulsations 1 (Human Run)</li>
+												<li>Nitzer Ebb - Alarm</li>
+												<li>Cubanate - Oxyacetylene</li>
+												<li>KMFDM - Liebeslied (Edit)</li>
+												<li>ohGr - Suhleap</li>
+										</ol>
+
+										<div class="label">
+												<p><a href="/projects/placeholder">Read More</a></p>
+										</div>
+								</div>
+
+								<div id="content">
+						            <img class="auditorium" src="../images/projects/numpad/Numpad.png" style="width: 250px;"/>
+						            <h3 style="float: right; right: 4px;">Hanwired-Numpad</h3>
+						            <p>1 day</p>
+						            <ol class="playlist_info">
+						                <li>Revolting Cocks - We Shall Cleanse the World</li>
+						                <li>Skinny Puppy - Far Too Frail</li>
+						                <li>Meat Beat Manifesto - Psyche-Out (Version 1)</li>
+						                <li>Die Krupps - Neue Helden (Leaether Strip Remix)</li>
+						                <li>Randolph &amp; Mortimer - Citizens</li>
+						                <li>Cubanate - Split Second</li>
+						                <li>Celldweller - Switchback</li>
+						                <li>Acumen Nation - Coming Down</li>
+						                <li>Test Dept - Pulsations 1 (Human Run)</li>
+						                <li>Nitzer Ebb - Alarm</li>
+						                <li>Cubanate - Oxyacetylene</li>
+						                <li>KMFDM - Liebeslied (Edit)</li>
+						                <li>ohGr - Suhleap</li>
+						            </ol>
+
+						            <div class="label">
+						                <p><a href="/projects/placeholder">Read More</a></p>
+						            </div>
+						        </div>
 
         <div id="site_entry">
             <p>[ <a href="#">BACK TO TOP</a> ]</p>
